[BugFix] Count container node/table overhead in memory Estimator
Estimator's Map and Collection estimates summed only the container's shallow size
plus its sampled key/value/element objects, omitting the internal per-entry wrappers
(HashMap.Node, tree/linked entries) and the backing table/array. On wide maps these
dominate: an Iceberg data-file cache was observed holding ~35% of its heap in
HashMap.Node + bucket arrays that the weigher could not see, so the cache retained
about 2.4x its configured budget and could OOM the FE.

Charge the structural overhead for the concrete JDK hash/tree/list containers, and
field-walk non-JDK Map/Collection implementations (Iceberg SerializableMap, Guava
Immutable*) instead of element-sampling them, so the JDK container they wrap is
reached and charged; other java.util maps (Map.of, singleton, unmodifiable views)
keep the previous sampling behavior with no structural charge.

Validated against JOL GraphLayout: HashMap / HashSet / ArrayList / wrapper-map
estimates move from 0.5-0.9x to 0.98-1.00x of the true retained size.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Signed-off-by: Youngwb <yangwenbo_mailbox@163.com>